[package]
name = "particles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14.1"
itertools = "0.13.0"
leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager.git", commit = "4504cb0" }
#leafwing-input-manager = "0.14.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2"
